Remove postgresql code from dependent projects

--- a/query/src/main/resources/application.conf
+++ b/query/src/main/resources/application.conf
@@ -24,16 +24,17 @@ hmda {
   }
 }
 
-db {
-  driver = "slick.driver.PostgresDriver$"
-
-  db {
-    url = "jdbc:postgresql://192.168.99.100:54321/hmda?user=postgres&password=postgres"
-    url = ${?JDBC_URL}
-    driver = org.postgresql.Driver
-    numThreads = 2
-  }
-}
+//TODO: configure database access for Keycloak
+//db {
+//  driver = "slick.driver.PostgresDriver$"
+//
+//  db {
+//    url = "jdbc:postgresql://192.168.99.100:54321/hmda?user=postgres&password=postgres"
+//    url = ${?JDBC_URL}
+//    driver = org.postgresql.Driver
+//    numThreads = 2
+//  }
+//}
 
 cassandra {
   host = "192.168.99.100"
