--- a/persistence-model/src/main/resources/application-dev.conf
+++ b/persistence-model/src/main/resources/application-dev.conf
@@ -60,25 +60,52 @@ akka {
     }
   }
   persistence {
-    journal {
-      plugin = "akka.persistence.journal.leveldb"
-      leveldb {
-        dir = "target/journal"
-        native = false
-      }
-    }
-    snapshot-store {
-      plugin = "akka.persistence.snapshot-store.local"
-      local {
-        dir = "target/snapshots"
-      }
-    }
-    query {
-      journal {
-        id = "akka.persistence.query.journal.leveldb"
-      }
-    }
+   journal.plugin = "cassandra-journal"
+   snapshot-store.plugin = "cassandra-snapshot-store"
+   query {
+     journal.id = "cassandra-query-journal"
+   }
   }
+}
+
+cassandra-journal {
+  contact-points = ["192.168.99.100"]
+  contact-points = [${?CASSANDRA_CLUSTER_HOSTS}]
+  keyspace = "hmda_journal"
+  keyspace = ${?CASSANDRA_JOURNAL_KEYSPACE}
+  table = "journal"
+  keyspace-autocreate = true
+  keyspace-autocreate-retries = 5
+  connect-retries = 10
+  connect-retry-delay = 5s
+  reconnect-max-delay = 60s
+  authentication.username = ""
+  authentication.username = ${?CASSANDRA_CLUSTER_USERNAME}
+  authentication.password = ""
+  authentication.password = ${?CASSANDRA_CLUSTER_PASSWORD}
+}
+
+cassandra-snapshot-store {
+  contact-points = ["192.168.99.100"]
+  contact-points = [${?CASSANDRA_CLUSTER_HOSTS}]
+  keyspace = "hmda_snapshot"
+  keyspace = ${?CASSANDRA_SNAPSHOT_KEYSPACE}
+  table = "snapshot"
+  keyspace-autocreate = true
+  keyspace-autocreate-retries = 5
+  connect-retries = 10
+  connect-retry-delay = 5s
+  reconnect-max-delay = 60s
+  authentication.username = ""
+  authentication.username = ${?CASSANDRA_CLUSTER_USERNAME}
+  authentication.password = ""
+  authentication.password = ${?CASSANDRA_CLUSTER_PASSWORD}
+}
+
+cassandra-query-journal {
+  refresh-interval = 5s
+  refresh-interval = ${?QUERY_JOURNAL_REFRESH_INTERVAL}
+  read-retries = 10
 }
 
 
