Use leveldb for demo mode

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,9 @@ services:
     volumes:
       - ./target/scala-2.12/hmda.jar:/opt/hmda.jar
     depends_on:
-      - cassandra
       - zookeeper
+      - keycloak_db
+      - cassandra
     environment:
       JDBC_URL: jdbc:postgresql://192.168.99.100:54321/hmda?user=postgres&password=postgres
       ZOOKEEPER_HOST: zookeeper
