Add tcp server stub

--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -29,6 +29,14 @@ hmda {
   }
   isDemo = false
   isDemo = ${?HMDA_IS_DEMO}
+  panel {
+    tcp {
+      host = "127.0.0.1"
+      host = ${?HMDA_PANEL_LOADER_HOST}
+      port = "8888"
+      port = ${?HMDA_PANEL_LOADER_PORT}
+    }
+  }
 }
 
 api-dispatcher {
