Add TCP panel loader

--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -35,6 +35,8 @@ hmda {
       host = ${?HMDA_PANEL_LOADER_HOST}
       port = "8888"
       port = ${?HMDA_PANEL_LOADER_PORT}
+      timeout = 5
+      parallelism = 5
     }
   }
 }
