--- a/api/src/main/resources/application-dev.conf
+++ b/api/src/main/resources/application-dev.conf
@@ -28,6 +28,15 @@ hmda {
     timeout = ${?HMDA_HTTP_TIMEOUT}
   }
   isDemo = true
+  panel {
+    tcp {
+      host = "127.0.0.1"
+      host = ${?HMDA_PANEL_LOADER_HOST}
+      port = "8888"
+      port = ${?HMDA_PANEL_LOADER_PORT}
+      timeout = 5
+    }
+  }
   actor-flow-parallelism = 4
 }
 
