--- a/query/src/main/resources/application.conf
+++ b/query/src/main/resources/application.conf
@@ -36,6 +36,26 @@ hmda {
 //  }
 //}
 
+db {
+  driver = "slick.driver.PostgresDriver$"
+  db {
+    driver = org.postgresql.Driver
+    host = "192.168.99.100"
+    host = ${?KEYCLOAK_HOST}
+    port = "5433"
+    port = ${?KEYCLOAK_PORT}
+    database = "keycloak"
+    database = ${?KEYCLOAK_DATABASE}
+    url = "jdbc:postgresql://"${db.db.host}":"${db.db.port}"/"${db.db.database}
+    url = ${?KEYCLOAK_URL_OVERRIDE}
+    user = "keycloak"
+    user = ${?KEYCLOAK_USER}
+    password = "password"
+    password = ${?KEYCLOAK_PASSWORD}
+    connectionPool = disabled
+  }
+}
+
 cassandra {
   host = "192.168.99.100"
   host = ${?CASSANDRA_CLUSTER_HOSTS}
