--- a/api/src/main/resources/application.conf
+++ b/api/src/main/resources/application.conf
@@ -27,6 +27,12 @@ hmda {
     timeout = 10
     timeout = ${?HMDA_HTTP_TIMEOUT}
   }
+  mail {
+    host = "mail_dev"
+    host = ${?HMDA_MAIL_HOST}
+    port = "25"
+    port = ${?HMDA_MAIL_PORT}
+  }
   isDemo = false
   isDemo = ${?HMDA_IS_DEMO}
 }
