Add specific dispatcher for cluster operations

--- a/cluster/src/main/resources/application.conf
+++ b/cluster/src/main/resources/application.conf
@@ -33,6 +33,10 @@ akka {
 
     metrics.enabled = off
 
+    use-dispatcher = cluster-dispatcher
+
+    auto-down-unreachable-after = off
+
   }
 
   extensions = ["de.heikoseeberger.constructr.ConstructrExtension"]
@@ -62,5 +66,14 @@ clustering {
   ip = "127.0.0.1"
   port = 0
   port = ${?APP_PORT}
+}
+
+cluster-dispatcher {
+  type = "Dispatcher"
+  executor = "fork-join-executor"
+  fork-join-executor {
+    parallelism-min = 2
+    parallelism-max = 4
+  }
 }
 
