--- a/cluster/src/test/resources/application.conf
+++ b/cluster/src/test/resources/application.conf
@@ -4,6 +4,7 @@ hmda {
     host = ${?HMDA_BENCHMARK_HOST}
     port = "8080"
     port = ${?HMDA_BENCHMARK_PORT}
-    nrOfUsers = 500
+    nrOfUsers = 5
+    rampUpTime = 10
   }
 }
