--- a/cluster/src/test/resources/application.conf
+++ b/cluster/src/test/resources/application.conf
@@ -2,9 +2,11 @@ hmda {
   benchmark {
     host = "localhost"
     host = ${?HMDA_BENCHMARK_HOST}
-    port = "8080"
+    port = 8080
     port = ${?HMDA_BENCHMARK_PORT}
-    nrOfUsers = 1000
-    rampUpTime = 30
+    adminPort = 8081
+    adminPort = ${?HMDA_BENCHMARK_ADMIN_PORT}
+    nrOfUsers = 10
+    rampUpTime = 5
   }
 }
