Configure search institutions and list filings

--- a/cluster/src/test/resources/application.conf
+++ b/cluster/src/test/resources/application.conf
@@ -8,5 +8,6 @@ hmda {
     adminPort = ${?HMDA_BENCHMARK_ADMIN_PORT}
     nrOfUsers = 10
     rampUpTime = 5
+    feederFile = "institutions10.csv"
   }
 }
