Configure cluster receptionist

--- a/cluster/src/main/resources/application.conf
+++ b/cluster/src/main/resources/application.conf
@@ -39,7 +39,7 @@ akka {
 
   }
 
-  extensions = ["de.heikoseeberger.constructr.ConstructrExtension"]
+  extensions = ["de.heikoseeberger.constructr.ConstructrExtension", "akka.cluster.client.ClusterClientReceptionist"]
 
 }
 
@@ -64,6 +64,7 @@ clustering {
   name = "hmda"
   name = ${?HMDA_CLUSTER_NAME}
   ip = "127.0.0.1"
+  ip = ${?HMDA_CLUSTER_IP}
   port = 0
   port = ${?APP_PORT}
 }
