--- a/loader/src/main/resources/application.conf
+++ b/loader/src/main/resources/application.conf
@@ -1,12 +1,17 @@
 akka {
-  loglevel = "INFO"
+  loglevel = "DEBUG"
   loglevel = ${?HMDA_LOGLEVEL}
   actor.warn-about-java-serializer-usage = off
+  actor.provider = cluster
+
+  extensions = ["akka.cluster.client.ClusterClientReceptionist"]
 }
 
 hmda {
+  clusterName = "hmda"
   adminUrl = "http://0.0.0.0:8081"
   adminUrl = ${?HMDA_HTTP_ADMIN_URL}
+  actorTimeout = 5
   httpTimeout = 5
   panel {
     tcp {
@@ -15,6 +20,12 @@ hmda {
       port = "8888"
       port = ${?HMDA_PANEL_LOADER_PORT}
     }
+  }
+  lar {
+    host = "127.0.0.1"
+    host = ${?HMDA_CLUSTER_HOST}
+    port = 0
+    port = ${?HMDA_CLUSTER_PORT}
   }
 }
 
