Add cluster name and filing creation

--- a/loader/src/main/resources/application.conf
+++ b/loader/src/main/resources/application.conf
@@ -9,6 +9,7 @@ akka {
 
 hmda {
   clusterName = "hmda"
+  clusterName = ${?HMDA_CLUSTER_NAME}
   adminUrl = "http://0.0.0.0:8081"
   adminUrl = ${?HMDA_HTTP_ADMIN_URL}
   actorTimeout = 5
