Use cluster actor ref provider in tests

--- a/persistence/src/test/resources/application.conf
+++ b/persistence/src/test/resources/application.conf
@@ -4,6 +4,15 @@ akka {
   log-dead-letters = off
   log-dead-letters-during-shutdown = off
   actor.warn-about-java-serializer-usage = off
+
+  actor {
+    provider = cluster
+  }
+  remote {
+    netty.tcp {
+      port = 0
+    }
+  }
 }
 
 akka.persistence.journal.plugin = "inmemory-journal"
