--- a/query/src/test/resources/application.conf
+++ b/query/src/test/resources/application.conf
@@ -8,6 +8,12 @@ akka {
   persistence.snapshot-store.plugin = "inmemory-snapshot-store"
   actor {
     timeout = 5
+    provider = cluster
+  }
+  remote {
+    netty.tcp {
+      port = 0
+    }
   }
 }
 
