--- a/api/src/test/resources/application.conf
+++ b/api/src/test/resources/application.conf
@@ -4,6 +4,14 @@ akka {
   testKit.filter-leeway = 10s
   http.parsing.max-content-length = 1G
   http.server.default-host-header = "cfpb.gov"
+  actor {
+    provider = cluster
+  }
+  remote {
+    netty.tcp {
+      port = 0
+    }
+  }
 }
 
 hmda {
