Refactor Cassandra Projection for lar filing

--- a/query/src/main/resources/application.conf
+++ b/query/src/main/resources/application.conf
@@ -22,6 +22,9 @@ hmda {
     fetch.size = 32
     group.size = 1000
   }
+  lar {
+    table = "lars2017"
+  }
 }
 
 //TODO: configure database access for Keycloak
