Add pubsub config

--- a/cluster/src/main/resources/application.conf
+++ b/cluster/src/main/resources/application.conf
@@ -40,7 +40,11 @@ akka {
 
   }
 
-  extensions = ["de.heikoseeberger.constructr.ConstructrExtension", "akka.cluster.client.ClusterClientReceptionist"]
+  extensions = [
+    "de.heikoseeberger.constructr.ConstructrExtension",
+    "akka.cluster.client.ClusterClientReceptionist",
+    "akka.cluster.pubsub.DistributedPubSub"
+  ]
 
 }
 
