Add institution protobuf serialization

--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -57,6 +57,7 @@ akka {
       "hmda.persistence.messages.events.validation.ValidationStatsEvents$SubmissionMacroStatsAdded" = validationStats
       "hmda.persistence.messages.events.validation.ValidationStatsEvents$IrsStatsAdded" = validationStats
       "hmda.model.fi.Filing" = filing
+      "hmda.model.institution.Institution" = institution
     }
   }
   persistence {
