--- a/persistence-model/src/main/resources/application-dev.conf
+++ b/persistence-model/src/main/resources/application-dev.conf
@@ -59,6 +59,8 @@ akka {
       "hmda.persistence.messages.events.validation.ValidationStatsEvents$IrsStatsAdded" = validationStats
       "hmda.model.fi.Filing" = filing
       "hmda.model.institution.Institution" = institution
+      "hmda.persistence.messages.commands.commands.InstitutionCommands$CreateInstitution" = institution
+      "hmda.persistence.messages.commands.commands.InstitutionCommands$ModifyInstitution" = institution
     }
   }
   persistence {
