Add protobuf serialization for filing commands

--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -60,6 +60,9 @@ akka {
       "hmda.model.institution.Institution" = institution
       "hmda.persistence.messages.commands.institutions.InstitutionCommands$CreateInstitution" = institution
       "hmda.persistence.messages.commands.institutions.InstitutionCommands$ModifyInstitution" = institution
+      "hmda.persistence.messages.commands.filing.FilingCommands$CreateFiling" = filing
+      "hmda.persistence.messages.commands.filing.FilingCommands$UpdateFilingStatus" = filing
+      "hmda.persistence.messages.commands.filing.FilingCommands$GetFilingByPeriod" = filing
     }
   }
   persistence {
