--- a/persistence-model/src/main/resources/application-dev.conf
+++ b/persistence-model/src/main/resources/application-dev.conf
@@ -61,6 +61,9 @@ akka {
       "hmda.model.institution.Institution" = institution
       "hmda.persistence.messages.commands.institutions.InstitutionCommands$CreateInstitution" = institution
       "hmda.persistence.messages.commands.institutions.InstitutionCommands$ModifyInstitution" = institution
+      "hmda.persistence.messages.commands.filing.FilingCommands$CreateFiling" = filing
+      "hmda.persistence.messages.commands.filing.FilingCommands$UpdateFilingStatus" = filing
+      "hmda.persistence.messages.commands.filing.FilingCommands$GetFilingByPeriod" = filing
     }
   }
   persistence {
