Add and configure Submission Signed pubsub serializer

--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -14,6 +14,7 @@ akka {
       submissionFSM = "hmda.persistence.serialization.submission.SubmissionFSMProtobufSerializer"
       validator = "hmda.persistence.serialization.validation.HmdaFileValidatorProtobufSerializer"
       validationStats = "hmda.persistence.serialization.validation.ValidationStatsProtobufSerializer"
+      pubsub = "hmda.persistence.serialization.pubsub.PubSubEventsProtobufSerializer"
     }
     serialization-bindings {
       "hmda.persistence.messages.events.institutions.InstitutionEvents$InstitutionCreated" = institution
@@ -63,6 +64,7 @@ akka {
       "hmda.persistence.messages.commands.filing.FilingCommands$CreateFiling" = filing
       "hmda.persistence.messages.commands.filing.FilingCommands$UpdateFilingStatus" = filing
       "hmda.persistence.messages.commands.filing.FilingCommands$GetFilingByPeriod" = filing
+      "hmda.persistence.messages.events.pubsub.PubSubEvents$SubmissionSignedPubSub" = pubsub
     }
   }
   persistence {
