--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -57,8 +57,8 @@ akka {
       "hmda.persistence.messages.events.validation.ValidationStatsEvents$SubmissionTaxIdAdded" = validationStats
       "hmda.persistence.messages.events.validation.ValidationStatsEvents$SubmissionMacroStatsAdded" = validationStats
       "hmda.persistence.messages.events.validation.ValidationStatsEvents$IrsStatsAdded" = validationStats
-      "hmda.model.fi.Filing" = filing
-      "hmda.model.institution.Institution" = institution
+      #"hmda.model.fi.Filing" = filing
+      #"hmda.model.institution.Institution" = institution
       "hmda.persistence.messages.commands.institutions.InstitutionCommands$CreateInstitution" = institution
       "hmda.persistence.messages.commands.institutions.InstitutionCommands$ModifyInstitution" = institution
       "hmda.persistence.messages.commands.filing.FilingCommands$CreateFiling" = filing
