--- a/publication/src/main/resources/application.conf
+++ b/publication/src/main/resources/application.conf
@@ -8,6 +8,24 @@ akka {
   }
 }
 
+hmda {
+  actor {
+    timeout = 5
+  }
+  publication {
+    fetchsize = 100
+    aws {
+      access-key-id = ""
+      access-key-id = ${?AWS_ACCESS_KEY_ID}
+      secret-access-key = ""
+      secret-access-key = ${?AWS_SECRET_ACCESS_KEY}
+      public-bucket = "hmda_public"
+      region = "us-east-1"
+    }
+  }
+
+}
+
 publication-dispatcher {
   type = Dispatcher
   executor = "fork-join-executor"
