Upload modified lar file to S3 bucket

--- a/publication/src/main/resources/application.conf
+++ b/publication/src/main/resources/application.conf
@@ -19,8 +19,10 @@ hmda {
       access-key-id = ${?AWS_ACCESS_KEY_ID}
       secret-access-key = ""
       secret-access-key = ${?AWS_SECRET_ACCESS_KEY}
-      public-bucket = "hmda_public"
+      public-bucket = "hmda-public"
+      public-bucket = ${?S3_PUBLIC_BUCKET}
       region = "us-east-1"
+      region = ${?AWS_REGION}
     }
   }
 
