--- a/publication/src/main/resources/application.conf
+++ b/publication/src/main/resources/application.conf
@@ -6,6 +6,17 @@ akka {
       }
     }
   }
+  quartz {
+    defaultTimezone = "EST"
+    threadPool.threadCount = 2
+    schedules {
+      Every30Seconds {
+        description = "A cron job that fires off every 30 seconds"
+        expression = "*/30 * * ? * *"
+      }
+
+    }
+  }
 }
 
 publication-dispatcher {
