Add snapshot recover for hmda filing

--- a/persistence/src/main/resources/application.conf
+++ b/persistence/src/main/resources/application.conf
@@ -13,6 +13,7 @@ hmda {
   actor-flow-parallelism = 4
   edits.demoMode = false
   edits.demoMode = ${?EDITS_DEMO_MODE}
+  journal.snapshot.counter = 1000
 }
 
 persistence-dispatcher {
