--- a/publication/src/main/resources/application.conf
+++ b/publication/src/main/resources/application.conf
@@ -32,6 +32,8 @@ hmda {
       secret-access-key = ${?AWS_SECRET_ACCESS_KEY}
       public-bucket = "hmda-public"
       public-bucket = ${?S3_PUBLIC_BUCKET}
+      private-bucket = "hmda-private"
+      private-bucket = ${?S3_PRIVATE_BUCKET}
       region = "us-east-1"
       region = ${?AWS_REGION}
     }
