Run regulator scheduler at 10PM every night

--- a/publication/src/main/resources/application.conf
+++ b/publication/src/main/resources/application.conf
@@ -14,7 +14,10 @@ akka {
         description = "A cron job that fires off every 30 seconds"
         expression = "*/30 * * ? * *"
       }
-
+      Daily10PM {
+        description = "Runs every day of the week at 10PM, including weekends"
+        expression = "00 00 22 ? * *"
+      }
     }
   }
 }
