Add Transmittal Sheet CassandraRepository

--- a/query/src/main/resources/application.conf
+++ b/query/src/main/resources/application.conf
@@ -22,8 +22,9 @@ hmda {
     fetch.size = 1000
     group.size = 1000
   }
-  lar {
-    table = "lars2017"
+  table {
+    lar = "lars2017"
+    ts = "ts2017"
   }
 }
 
