Publish TS regulator data (raw)

--- a/publication/src/main/resources/application.conf
+++ b/publication/src/main/resources/application.conf
@@ -10,13 +10,15 @@ akka {
     defaultTimezone = "EST"
     threadPool.threadCount = 2
     schedules {
-      Every30Seconds {
-        description = "A cron job that fires off every 30 seconds"
+      TSRegulator {
+        description = "Publish TS regulator data on a schedule"
         expression = "*/30 * * ? * *"
+        //expression = "00 00 22 ? * *"
       }
-      Daily10PM {
-        description = "Runs every day of the week at 10PM, including weekends"
-        expression = "00 00 22 ? * *"
+      LARRegulator {
+        description = "Publish LAR regulator data on a schedule"
+        expression = "*/30 * * ? * *"
+        //expression = "00 00 22 ? * *"
       }
     }
   }
