Add panel regulator data

--- a/publication/src/main/resources/application.conf
+++ b/publication/src/main/resources/application.conf
@@ -20,6 +20,11 @@ akka {
         //expression = "*/30 * * ? * *"
         expression = "00 00 22 ? * *"
       }
+      PanelRegulator {
+        description = "Publish LAR regulator data on a schedule"
+        //expression = "*/30 * * ? * *"
+        expression = "00 00 22 ? * *"
+      }
     }
   }
 }
