--- a/publication/src/main/resources/application.conf
+++ b/publication/src/main/resources/application.conf
@@ -17,13 +17,13 @@ akka {
       }
       LARRegulator {
         description = "Publish LAR regulator data on a schedule"
-        expression = "*/30 * * ? * *"
-        //expression = "00 00 22 ? * *"
+        //expression = "*/30 * * ? * *"
+        expression = "00 00 22 ? * *"
       }
       PanelRegulator {
         description = "Publish LAR regulator data on a schedule"
-        expression = "*/30 * * ? * *"
-        //expression = "00 00 22 ? * *"
+        //expression = "*/30 * * ? * *"
+        expression = "00 00 22 ? * *"
       }
     }
   }
@@ -40,9 +40,11 @@ hmda {
       access-key-id = ${?AWS_ACCESS_KEY_ID}
       secret-access-key = ""
       secret-access-key = ${?AWS_SECRET_ACCESS_KEY}
-      public-bucket = "hmda-public"
+      environment = "dev" //change to "prod" for production S3 bucket
+      environment = ${?AWS_ENVIRONMENT}
+      public-bucket = "cfpb-hmda-public"
       public-bucket = ${?S3_PUBLIC_BUCKET}
-      private-bucket = "hmda-private"
+      private-bucket = "cfpb-hmda-export"
       private-bucket = ${?S3_PRIVATE_BUCKET}
       region = "us-east-1"
       region = ${?AWS_REGION}
