Configure APOR protobuf serializer

--- a/persistence-model/src/main/resources/application-dev.conf
+++ b/persistence-model/src/main/resources/application-dev.conf
@@ -15,6 +15,7 @@ akka {
       validator = "hmda.persistence.serialization.validation.HmdaFileValidatorProtobufSerializer"
       validationStats = "hmda.persistence.serialization.validation.ValidationStatsProtobufSerializer"
       pubsub = "hmda.persistence.serialization.pubsub.PubSubEventsProtobufSerializer"
+      apor = "hmda.persistence.serialization.apor.APORProtobufSerializer"
     }
     serialization-bindings {
       "hmda.persistence.messages.events.institutions.InstitutionEvents$InstitutionCreated" = institution
@@ -65,6 +66,8 @@ akka {
       "hmda.persistence.messages.commands.filing.FilingCommands$UpdateFilingStatus" = filing
       "hmda.persistence.messages.commands.filing.FilingCommands$GetFilingByPeriod" = filing
       "hmda.persistence.messages.events.pubsub.PubSubEvents$SubmissionSignedPubSub" = pubsub
+      "hmda.persistence.messages.commands.apor.APORCommands$CreateApor" = apor
+      "hmda.persistence.messages.events.apor.APOREvents$AporCreated" = apor
     }
   }
   persistence {
