--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -68,6 +68,7 @@ akka {
       "hmda.persistence.messages.events.pubsub.PubSubEvents$SubmissionSignedPubSub" = pubsub
       "hmda.persistence.messages.commands.apor.APORCommands$CreateApor" = apor
       "hmda.persistence.messages.events.apor.APOREvents$AporCreated" = apor
+      "hmda.persistence.messages.commands.apor.APORCommands$CalculateRateSpread" = apor
     }
   }
   persistence {
