Schedule apor S3 download on Thursdays at 23h

--- a/persistence/src/main/resources/application.conf
+++ b/persistence/src/main/resources/application.conf
@@ -11,9 +11,9 @@ akka {
     threadPool.threadCount = 2
     schedules {
       AporCalculator {
-        description = "Publish LAR regulator data on a schedule"
-        expression = "*/30 * * ? * *"
-        //expression = "00 00 22 ? * *"
+        description = "Retrieve APOR tables from S3 on a schedule"
+        //expression = "*/30 * * ? * *"
+        expression = "0 0 23 ? * THU"
       }
     }
   }
