setting up lar endpoint

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -5,6 +5,9 @@
       href: "/lar/#parse"
     - title: "Validate"
       href: "/lar/validate"
+    - title: "Parse and Validate"
+      href: "/lar/parseAndValidate"
+
 - title: "Institutions"
   href: "/institutions/"
   sub:
