--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -29,3 +29,8 @@
       sub:
       - title: "Batch"
         href: "/uli/#validate-batch"
+- title: "Rate Spread"
+  href: "/rate-spread/"
+  sub:
+    - title: "Batch"
+      href: "/rate-spread/#batch"
