--- a/persistence/src/main/resources/application.conf
+++ b/persistence/src/main/resources/application.conf
@@ -45,9 +45,9 @@ hmda {
     }
   }
   apor {
-    fixed.rate.fileName = "YieldTableFixed_CY2017.txt"
+    fixed.rate.fileName = "YieldTableFixed.txt"
     fixed.rate.fileName = ${?APOR_FIXED_FILENAME}
-    variable.rate.fileName = "YieldTableAdjustable_CY2017.txt"
+    variable.rate.fileName = "YieldTableAdjustable.txt"
     variable.rate.fileName = ${?APOR_VARIABLE_FILENAME}
   }
 }
