--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -35,6 +35,8 @@ akka {
       "hmda.persistence.messages.events.validation.SubmissionLarStatsEvents$SubmittedLarsUpdated" = larStats
       "hmda.persistence.messages.events.validation.SubmissionLarStatsEvents$MacroStatsUpdated" = larStats
       "hmda.persistence.messages.events.validation.SubmissionLarStatsEvents$IrsStatsUpdated" = larStats
+      "hmda.persistence.messages.events.validation.SubmissionLarStatsEvents$SubmittedLarsUpdated" = larStats
+      "hmda.persistence.messages.events.validation.SubmissionLarStatsEvents$ValidatedLarsUpdated" = larStats
       "hmda.persistence.messages.events.processing.SubmissionFSMEvents$SubmissionFSMCreated" = submissionFSM
       "hmda.persistence.messages.events.processing.SubmissionFSMEvents$SubmissionUploading" = submissionFSM
       "hmda.persistence.messages.events.processing.SubmissionFSMEvents$SubmissionUploaded" = submissionFSM
