Load APOR data every day
And allow overriding the schedule with an environment variable

--- a/persistence/src/main/resources/application.conf
+++ b/persistence/src/main/resources/application.conf
@@ -13,7 +13,8 @@ akka {
       AporCalculator {
         description = "Retrieve APOR tables from S3 on a schedule"
         //expression = "*/30 * * ? * *"
-        expression = "0 0 23 ? * THU"
+        expression = "0 0 23 ? * *"
+        expression = ${?APOR_DATA_LOAD_SCHEDULE}
       }
     }
   }
