--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,17 @@
 node_modules/
 Gemfile.lock
 _site/
+api-model/
+api/
+census/
+cluster/
+model/
+parser/
+persistence-model/
+persistence/
+platform-test/
+project/
+publication/
+query/
+target/
+validation/
