--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,24 @@
-exclude: [npm-packages-offline-cache, node_modules, Gemfile, Gemfile.lock, package.json, yarn.loc]
+exclude:
+  - npm-packages-offline-cache
+  - node_modules
+  - Gemfile
+  - Gemfile.lock
+  - package.json
+  - yarn.loc
+  - api-model
+  - api
+  - census
+  - cluster
+  - model
+  - parser
+  - persistence-model
+  - persistence
+  - platform-test
+  - project
+  - publication
+  - query
+  - target
+  - validation
 
 sass:
   sass_dir: _sass
