--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -31,8 +31,8 @@
       sub:
       - title: "Batch"
         href: "/uli/#validate-batch"
-- title: "Rate Spread"
-  href: "/rate-spread/"
-  sub:
-    - title: "Batch"
-      href: "/rate-spread/#batch"
+#- title: "Rate Spread"
+#  href: "/rate-spread/"
+#  sub:
+#    - title: "Batch"
+#      href: "/rate-spread/#batch"
