Move cron scheduler config to cluster project
since the HmdaPlatform.scala now schedules the APOR data load cron job

--- a/cluster/src/main/resources/application.conf
+++ b/cluster/src/main/resources/application.conf
@@ -46,6 +46,18 @@ akka {
     "akka.cluster.pubsub.DistributedPubSub"
   ]
 
+  quartz {
+    defaultTimezone = "EST"
+    threadPool.threadCount = 2
+    schedules {
+      AporCalculator {
+        description = "Retrieve APOR tables from S3 on a schedule"
+        //expression = "*/30 * * ? * *"
+        expression = "0 0 23 ? * *"
+        expression = ${?APOR_DATA_LOAD_SCHEDULE}
+      }
+    }
+  }
 }
 
 constructr.coordination.nodes = [${hmda.zookeeperHost}":"${hmda.zookeeperPort}]
