--- a/publication/src/main/resources/application.conf
+++ b/publication/src/main/resources/application.conf
@@ -12,8 +12,8 @@ akka {
     schedules {
       TSRegulator {
         description = "Publish TS regulator data on a schedule"
-        //expression = "*/30 * * ? * *"
-        expression = "00 00 22 ? * *"
+        expression = "*/30 * * ? * *"
+        //expression = "00 00 22 ? * *"
       }
       LARRegulator {
         description = "Publish LAR regulator data on a schedule"
