Change environment variables names

--- a/cluster/src/main/resources/application.conf
+++ b/cluster/src/main/resources/application.conf
@@ -13,11 +13,11 @@ akka {
 
     netty.tcp {
       hostname = ${?HOST}
-      port = 2551
-      port = ${?PORT_2551}
+      port = 0
+      port = ${?APP_PORT}
 
       bind-hostname = 0.0.0.0
-      bind-port = 2551
+      bind-port = 0
     }
 
   }
@@ -56,9 +56,9 @@ akka {
       # InetAddress.getLocalHost.getHostAddress is used not overriden or empty
       hostname = ${?HOST}
       port = 19999
-      port = ${?PORT_19999}
+      port = ${?AKKA_HTTP_MANAGEMENT_PORT}
       bind-hostname = 0.0.0.0
-      bind-port = 19999
+      bind-port = 0
     }
 
     cluster.bootstrap {
