Fix startup configuration

--- a/cluster/src/main/resources/application.conf
+++ b/cluster/src/main/resources/application.conf
@@ -25,7 +25,8 @@ akka {
   cluster {
     roles = [persistence, validation, query, publication, health, api]
     failure-detector {
-      threshold = 12 //Increased value for AWS environments
+      //Increased values for AWS environments
+      threshold = 12
       acceptable-hearbeat-pause = 10s
     }
     metrics.enabled = off
