Update documentation, add default hostname for Akka HTTP Cluster Management

--- a/cluster/src/main/resources/application.conf
+++ b/cluster/src/main/resources/application.conf
@@ -35,12 +35,6 @@ akka {
 
     auto-down-unreachable-after = off
 
-    http {
-      management {
-        hostname = "127.0.0.1"
-        port = 9999
-      }
-    }
   }
 
   extensions = [
@@ -55,6 +49,7 @@ akka {
       # The hostname where the HTTP Server for Http Cluster Management will be started.
       # This defines the interface to use.
       # InetAddress.getLocalHost.getHostAddress is used not overriden or empty
+      hostname = "127.0.0.1"
       hostname = ${?HOST}
       port = 19999
       port = ${?AKKA_HTTP_MANAGEMENT_PORT}
@@ -76,6 +71,7 @@ akka {
         # Examples, set this to:
         # "default.svc.cluster.local" or "my-namespace.svc.cluster.local" for kubernetes clusters.
         service-namespace = ".marathon.mesos"
+        service-namespace = ${?SERVICE_NAMESPACE}
         # The effective service name is the exact string that will be used to perform service discovery.
         #
         # Set this value to a specific string to override the default behaviour of building the effective name by
