Make processing parallelism configurable

--- a/persistence/src/main/resources/application.conf
+++ b/persistence/src/main/resources/application.conf
@@ -14,6 +14,7 @@ hmda {
     timeout = 5
   }
   actor-flow-parallelism = 4
+  processing.parallelism = 3
   edits.demoMode = false
   edits.demoMode = ${?EDITS_DEMO_MODE}
   journal.snapshot.counter = 1000
