Make processing parallelism configurable by environment variable

--- a/persistence/src/main/resources/application.conf
+++ b/persistence/src/main/resources/application.conf
@@ -15,6 +15,7 @@ hmda {
   }
   actor-flow-parallelism = 4
   processing.parallelism = 3
+  processing.parallelism = ${?HMDA_PROCESSING_PARALLELISM}
   edits.demoMode = false
   edits.demoMode = ${?EDITS_DEMO_MODE}
   journal.snapshot.counter = 1000
