Replace HmdaFileValidationState with HmdaVerificationState
Since HmdaFileValidationState would get too large to load into memory,
replace it with a much smaller state variable. Instead of holding all
edits and validated lines in state, stream them from the event stream
when needed.

Use EventAdapters to translate historical events into the new model.

TODO: update edit details endpoint to use a streaming model

--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -74,7 +74,18 @@ akka {
     }
   }
   persistence {
-    journal.plugin = "cassandra-journal"
+    journal {
+      plugin = "cassandra-journal"
+      inmem {
+        event-adapters {
+          hmdaValidationStateAdapter = "hmda.persistence.eventAdapters.HmdaValidationEventAdapter"
+        }
+
+        event-adapter-bindings {
+          "hmda.persistence.processing.HmdaFileValidator.HmdaFileValidationState" = hmdaValidationStateAdapter
+        }
+      }
+    }
     snapshot-store.plugin = "cassandra-snapshot-store"
     query {
       journal.id = "cassandra-query-journal"
