--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -74,18 +74,7 @@ akka {
     }
   }
   persistence {
-    journal {
-      plugin = "cassandra-journal"
-      inmem {
-        event-adapters {
-          hmdaValidationStateAdapter = "hmda.persistence.eventAdapters.HmdaValidationEventAdapter"
-        }
-
-        event-adapter-bindings {
-          "hmda.persistence.processing.HmdaFileValidator.HmdaFileValidationState" = hmdaValidationStateAdapter
-        }
-      }
-    }
+    journal.plugin = "cassandra-journal"
     snapshot-store.plugin = "cassandra-snapshot-store"
     query {
       journal.id = "cassandra-query-journal"
