Separate local and cluster configs

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,7 +10,7 @@ akka {
 
   remote {
     netty.tcp {
-      hostname = ${HOST}
+      hostname = ${?HOST}
       port = 2551
       port = ${?PORT_2551}
 
@@ -24,7 +24,7 @@ akka {
       # The hostname where the HTTP Server for Http Cluster Management will be started.
       # This defines the interface to use.
       # InetAddress.getLocalHost.getHostAddress is used not overriden or empty
-      hostname = ${HOST}
+      hostname = ${?HOST}
       port = 19999
       port = ${?PORT_19999}
 
@@ -40,7 +40,7 @@ akka {
 
         # Define this name to be looked up in service discovery for "neighboring" nodes
         # If undefined, the name will be extracted from the ActorSystem name
-        service-name = ${MARATHON_APP_ID}
+        service-name = ${?MARATHON_APP_ID}
 
         # Added as suffix to the service-name to build the effective-service name used in the contact-point service lookups
         # If undefined, nothing will be appended to the service-name.
