--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -16,6 +16,7 @@ akka {
       validationStats = "hmda.persistence.serialization.validation.ValidationStatsProtobufSerializer"
       pubsub = "hmda.persistence.serialization.pubsub.PubSubEventsProtobufSerializer"
       apor = "hmda.persistence.serialization.apor.APORProtobufSerializer"
+      validationState = "hmda.persistence.serialization.processing.HmdaFileValidatorStateProtobufSerializer"
     }
     serialization-bindings {
       "hmda.persistence.messages.events.institutions.InstitutionEvents$InstitutionCreated" = institution
@@ -71,6 +72,9 @@ akka {
       "hmda.persistence.messages.commands.apor.APORCommands$CreateApor" = apor
       "hmda.persistence.messages.events.apor.APOREvents$AporCreated" = apor
       "hmda.persistence.messages.commands.apor.APORCommands$CalculateRateSpread" = apor
+      "hmda.persistence.messages.commands.processing.HmdaFileValidatorState$SVState" = validationState
+      "hmda.persistence.messages.commands.processing.HmdaFileValidatorState$QMState" = validationState
+      "hmda.persistence.messages.commands.processing.HmdaFileValidatorState$HmdaVerificationState" = validationState
     }
   }
   persistence {
