--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,26 @@ services:
       EXCLUDE_PORTS: '443' # use lb's ssl instead of ui's nginx
       FORCE_SSL: 'true' # redirect 80 to 443
 
+  reports_ui:
+    build:
+      context: ../hmda-pub-ui
+      args:
+        SKIP_JS_BUILD: 1
+    depends_on:
+      - api
+      - auth_proxy
+      - keycloak
+    volumes:
+      - ../hmda-pub-ui/dist:/usr/src/app/reports
+    environment:
+      APP_URL: https://192.168.99.100
+      HMDA_API: https://192.168.99.100:4443/hmda
+      KEYCLOAK_URL: https://192.168.99.100:8443/auth/realms/hmda
+      # lb settings
+      VIRTUAL_HOST: 'http://*:80/reports/*, https://*:443/reports/*'
+      EXCLUDE_PORTS: '443' # use lb's ssl instead of ui's nginx
+      FORCE_SSL: 'true' # redirect 80 to 443
+
   keycloak:
     build: ../hmda-platform-auth/keycloak
     environment:
