Use protobuf to serialize report publisher messages

--- a/persistence-model/src/main/resources/application-dev.conf
+++ b/persistence-model/src/main/resources/application-dev.conf
@@ -69,6 +69,10 @@ akka {
       "hmda.persistence.messages.commands.filing.FilingCommands$UpdateFilingStatus" = filing
       "hmda.persistence.messages.commands.filing.FilingCommands$GetFilingByPeriod" = filing
       "hmda.persistence.messages.events.pubsub.PubSubEvents$SubmissionSignedPubSub" = pubsub
+      "hmda.persistence.messages.events.pubsub.PubSubEvents$FindAggregatePublisher" = pubsub
+      "hmda.persistence.messages.events.pubsub.PubSubEvents$FindDisclosurePublisher" = pubsub
+      "hmda.persistence.messages.commands.publication.PublicationCommands$GenerateAggregateReports" = pubsub
+      "hmda.persistence.messages.commands.publication.PublicationCommands$GenerateDisclosureReports" = pubsub
       "hmda.persistence.messages.commands.apor.APORCommands$CreateApor" = apor
       "hmda.persistence.messages.events.apor.APOREvents$AporCreated" = apor
       "hmda.persistence.messages.commands.apor.APORCommands$CalculateRateSpread" = apor
