--- a/persistence-model/src/main/resources/application.conf
+++ b/persistence-model/src/main/resources/application.conf
@@ -17,6 +17,7 @@ akka {
       pubsub = "hmda.persistence.serialization.pubsub.PubSubEventsProtobufSerializer"
       apor = "hmda.persistence.serialization.apor.APORProtobufSerializer"
       validationState = "hmda.persistence.serialization.processing.HmdaFileValidatorStateProtobufSerializer"
+      hmdaFiler = "hmda.persistence.serialization.filing.HmdaFilerProtobufSerializer"
     }
     serialization-bindings {
       "hmda.persistence.messages.events.institutions.InstitutionEvents$InstitutionCreated" = institution
@@ -79,6 +80,11 @@ akka {
       "hmda.persistence.messages.commands.processing.HmdaFileValidatorState$SVState" = validationState
       "hmda.persistence.messages.commands.processing.HmdaFileValidatorState$QMState" = validationState
       "hmda.persistence.messages.commands.processing.HmdaFileValidatorState$HmdaVerificationState" = validationState
+      "hmda.persistence.messages.commands.institutions.HmdaFilerCommands$CreateHmdaFiler" = hmdaFiler
+      "hmda.persistence.messages.commands.institutions.HmdaFilerCommands$DeleteHmdaFiler" = hmdaFiler
+      "hmda.persistence.messages.commands.institutions.HmdaFilerCommands$FindHmdaFiler" = hmdaFiler
+      "hmda.persistence.messages.events.institutions.HmdaFilerEvents$HmdaFilerCreated" = hmdaFiler
+      "hmda.persistence.messages.events.institutions.HmdaFilerEvents$HmdaFilerDeleted" = hmdaFiler
     }
   }
   persistence {
