Serialize find hmda filers to protobuf

--- a/persistence-model/src/main/resources/application-dev.conf
+++ b/persistence-model/src/main/resources/application-dev.conf
@@ -85,6 +85,7 @@ akka {
       "hmda.persistence.messages.commands.institutions.HmdaFilerCommands$FindHmdaFiler" = hmdaFiler
       "hmda.persistence.messages.events.institutions.HmdaFilerEvents$HmdaFilerCreated" = hmdaFiler
       "hmda.persistence.messages.events.institutions.HmdaFilerEvents$HmdaFilerDeleted" = hmdaFiler
+      "hmda.persistence.messages.commands.institutions.HmdaFilerCommands$FindHmdaFilers" = hmdaFiler
     }
   }
   persistence {
