Refactor http api project, add TsValidationHttpApi

--- a/src/main/resources/application-dev.conf
+++ b/src/main/resources/application-dev.conf
@@ -1,5 +1,9 @@
 akka {
   loglevel = INFO
+
+  http.server.default-host-header = "cfpb.gov"
+  http.parsing.max-content-length = 1G
+
   actor {
     provider = "cluster"
   }
