--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -4,6 +4,9 @@ akka {
 
   discovery.method = akka-dns
 
+  http.server.default-host-header = "cfpb.gov"
+  http.parsing.max-content-length = 1G
+
   actor {
     provider = "cluster"
   }
