Add base WS API

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -93,6 +93,13 @@ hmda {
     timeout = ${?HMDA_HTTP_TIMEOUT}
   }
 
+  ws {
+    host = "0.0.0.0"
+    host = ${?WS_HOST}
+    port = 9080
+    port = ${?WS_PORT}
+  }
+
   filing {
     ts.length = 15
     lar.length = 110
