--- a/hmda/src/main/resources/application-kubernetes.conf
+++ b/hmda/src/main/resources/application-kubernetes.conf
@@ -1,35 +1,44 @@
 akka {
+
   loglevel = INFO
 
   http.server.default-host-header = "cfpb.gov"
   http.parsing.max-content-length = 1G
 
-  discovery.method = akka-dns
-
   actor {
     provider = "cluster"
   }
 
-  remote {
-    netty.tcp {
-      hostname = "127.0.0.1"
-      port = 2551
+  discovery {
+    # pick the discovery method you'd like to use:
+    method = kubernetes-api
 
-      bind-hostname = 0.0.0.0
-      bind-port = 2551
+    kubernetes-api {
+      pod-label-selector = "actorSystemName=hmda2"
     }
   }
 
   management {
     http {
-      hostname = "127.0.0.1"
       port = 19999
+    }
 
-      bind-hostname = 0.0.0.0
-      bind-port = 19999
+    cluster.bootstrap {
+
+      contact-point-discovery {
+        service-name = "hmda-api"
+        service-namespace = "default.svc.cluster.local"
+        stable-margin = 5 seconds
+      }
+
+      contact-point {
+        # currently this port HAS TO be the same as the `akka.management.http.port`
+        # it would not have to be once we implement the SRV record watching, since then we could potentially
+        # get the ports from the DNS records.
+        fallback-port = 19999
+      }
     }
   }
-
 }
 
 hmda {
