--- a/hmda/src/main/resources/application-kubernetes.conf
+++ b/hmda/src/main/resources/application-kubernetes.conf
@@ -26,8 +26,10 @@ akka {
     cluster.bootstrap {
 
       contact-point-discovery {
-        service-name = "hmda-api"
+        service-name = "hmda-bootstrap"
+        service-name = ${?KUBERNETES_HMDA_SERVICE_NAME}
         service-namespace = "default.svc.cluster.local"
+        service-namespace = ${?KUBERNETES_HMDA_SERVICE_NAMESPACE}
         stable-margin = 5 seconds
       }
 
